@@ -37,7 +37,7 @@ import static org.testng.Assert.assertTrue;
  * @build JextractToolRunner
  * @bug 8240811
  * @summary jextract generates non-compilable code for name collision between a struct and a global variable
- * @run testng/othervm -Dforeign.restricted=permit Test8240811
+ * @run testng/othervm --enable-native-access=jdk.incubator.jextract,ALL-UNNAMED Test8240811
  */
 public class Test8240811 extends JextractToolRunner {
     @Test
