@@ -21,6 +21,7 @@
  * questions.
  */
 
+import jdk.incubator.foreign.ResourceScope;
 import org.testng.annotations.Test;
 
 import jdk.incubator.foreign.MemorySegment;
@@ -36,7 +37,7 @@ import static jdk.incubator.foreign.CLinker.*;
  * @library ..
  * @modules jdk.incubator.jextract
  * @run driver JtregJextract -t test.jextract.printf -l Printf -- printf.h
- * @run testng/othervm -Dforeign.restricted=permit Test8244959
+ * @run testng/othervm --enable-native-access=jdk.incubator.jextract,ALL-UNNAMED Test8244959
  */
 /*
  * @test id=sources
@@ -45,15 +46,16 @@ import static jdk.incubator.foreign.CLinker.*;
  * @library ..
  * @modules jdk.incubator.jextract
  * @run driver JtregJextractSources -t test.jextract.printf -l Printf -- printf.h
- * @run testng/othervm -Dforeign.restricted=permit Test8244959
+ * @run testng/othervm --enable-native-access=jdk.incubator.jextract,ALL-UNNAMED Test8244959
  */
 public class Test8244959 {
     @Test
     public void testsPrintf() {
-        try (MemorySegment s = MemorySegment.allocateNative(1024)) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment s = MemorySegment.allocateNative(1024, scope);
             my_sprintf(s,
-                toCString("%hhd %c %.2f %.2f %lld %lld %d %hd %d %d %lld %c"), 12,
-                (byte) 1, 'b', -1.25f, 5.5d, -200L, Long.MAX_VALUE, (byte) -2, (short) 2, 3, (short) -4, 5L, 'a');
+                    toCString("%hhd %c %.2f %.2f %lld %lld %d %hd %d %d %lld %c", scope), 12,
+                    (byte) 1, 'b', -1.25f, 5.5d, -200L, Long.MAX_VALUE, (byte) -2, (short) 2, 3, (short) -4, 5L, 'a');
             String str = toJavaString(s);
             assertEquals(str, "1 b -1.25 5.50 -200 " + Long.MAX_VALUE + " -2 2 3 -4 5 a");
         }
