@@ -23,7 +23,7 @@
 
 import jdk.incubator.foreign.MemoryAccess;
 import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.NativeScope;
+import jdk.incubator.foreign.ResourceScope;
 import org.testng.annotations.Test;
 import test.jextract.test8246341.*;
 import static org.testng.Assert.assertEquals;
@@ -38,7 +38,7 @@ import static jdk.incubator.foreign.CLinker.*;
  * @library ..
  * @modules jdk.incubator.jextract
  * @run driver JtregJextract -l Test8246341 -t test.jextract.test8246341 -- test8246341.h
- * @run testng/othervm -Dforeign.restricted=permit LibTest8246341Test
+ * @run testng/othervm --enable-native-access=jdk.incubator.jextract,ALL-UNNAMED LibTest8246341Test
  */
 /*
  * @test id=sources
@@ -47,21 +47,22 @@ import static jdk.incubator.foreign.CLinker.*;
  * @library ..
  * @modules jdk.incubator.jextract
  * @run driver JtregJextractSources -l Test8246341 -t test.jextract.test8246341 -- test8246341.h
- * @run testng/othervm -Dforeign.restricted=permit LibTest8246341Test
+ * @run testng/othervm --enable-native-access=jdk.incubator.jextract,ALL-UNNAMED LibTest8246341Test
  */
 public class LibTest8246341Test {
     @Test
     public void testPointerArray() {
         boolean[] callbackCalled = new boolean[1];
-        try (var callback = func$callback.allocate((argc, argv) -> {
-            callbackCalled[0] = true;
-            var addr = argv.asSegmentRestricted(C_POINTER.byteSize() * argc);
-            assertEquals(argc, 4);
-            assertEquals(toJavaStringRestricted(MemoryAccess.getAddressAtIndex(addr, 0)), "java");
-            assertEquals(toJavaStringRestricted(MemoryAccess.getAddressAtIndex(addr, 1)), "python");
-            assertEquals(toJavaStringRestricted(MemoryAccess.getAddressAtIndex(addr, 2)), "javascript");
-            assertEquals(toJavaStringRestricted(MemoryAccess.getAddressAtIndex(addr, 3)), "c++");
-        })) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            var callback = func$callback.allocate((argc, argv) -> {
+                callbackCalled[0] = true;
+                var addr = argv.asSegment(C_POINTER.byteSize() * argc, scope);
+                assertEquals(argc, 4);
+                assertEquals(toJavaString(MemoryAccess.getAddressAtIndex(addr, 0)), "java");
+                assertEquals(toJavaString(MemoryAccess.getAddressAtIndex(addr, 1)), "python");
+                assertEquals(toJavaString(MemoryAccess.getAddressAtIndex(addr, 2)), "javascript");
+                assertEquals(toJavaString(MemoryAccess.getAddressAtIndex(addr, 3)), "c++");
+            }, scope);
             func(callback);
         }
         assertTrue(callbackCalled[0]);
@@ -73,7 +74,7 @@ public class LibTest8246341Test {
             var addr = scope.allocate(C_POINTER);
             MemoryAccess.setAddress(addr, MemoryAddress.NULL);
             fillin(addr);
-            assertEquals(toJavaStringRestricted(MemoryAccess.getAddress(addr)), "hello world");
+            assertEquals(toJavaString(MemoryAccess.getAddress(addr)), "hello world");
         }
     }
 }
