@@ -25,6 +25,7 @@ import org.testng.annotations.Test;
 import jdk.incubator.foreign.CLinker;
 import jdk.incubator.foreign.MemoryAddress;
 import jdk.incubator.foreign.MemorySegment;
+import jdk.incubator.foreign.ResourceScope;
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertTrue;
 import static test.jextract.test8253102.test8253102_h.*;
@@ -37,7 +38,7 @@ import test.jextract.test8253102.*;
  * @library ..
  * @modules jdk.incubator.jextract
  * @run driver JtregJextract -l Test8253102 -t test.jextract.test8253102 -- test8253102.h
- * @run testng/othervm -Dforeign.restricted=permit LibTest8253102Test
+ * @run testng/othervm --enable-native-access=jdk.incubator.jextract,ALL-UNNAMED LibTest8253102Test
  */
 /*
  * @test id=sources
@@ -46,23 +47,17 @@ import test.jextract.test8253102.*;
  * @library ..
  * @modules jdk.incubator.jextract
  * @run driver JtregJextractSources -l Test8253102 -t test.jextract.test8253102 -- test8253102.h
- * @run testng/othervm -Dforeign.restricted=permit LibTest8253102Test
+ * @run testng/othervm --enable-native-access=jdk.incubator.jextract,ALL-UNNAMED LibTest8253102Test
  */
 public class LibTest8253102Test {
     @Test
     public void test() {
-        MemoryAddress addr = make(14, 99);
-        MemorySegment seg = Point.ofAddressRestricted(addr);
-        assertEquals(Point.x$get(seg), 14);
-        assertEquals(Point.y$get(seg), 99);
-        CLinker.freeMemoryRestricted(addr);
-        boolean caughtException = false;
-        try {
-            seg.close();
-        } catch (UnsupportedOperationException uoe) {
-            System.err.println(uoe);
-            caughtException = true;
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemoryAddress addr = make(14, 99);
+            MemorySegment seg = Point.ofAddress(addr, scope);
+            assertEquals(Point.x$get(seg), 14);
+            assertEquals(Point.y$get(seg), 99);
+            CLinker.freeMemory(addr);
         }
-        assertTrue(caughtException);
     }
 }
