@@ -26,6 +26,7 @@ import jdk.incubator.foreign.CLinker;
 import jdk.incubator.foreign.GroupLayout;
 import jdk.incubator.foreign.MemoryLayout;
 import jdk.incubator.foreign.MemoryLayout.PathElement;
+import jdk.incubator.foreign.ResourceScope;
 import org.testng.annotations.Test;
 
 import test.jextract.unsupported.unsupported_h;
@@ -39,7 +40,7 @@ import test.jextract.unsupported.*;
  * @library ..
  * @modules jdk.incubator.jextract
  * @run driver JtregJextract -l Unsupported -t test.jextract.unsupported -- unsupported.h
- * @run testng/othervm -Dforeign.restricted=permit LibUnsupportedTest
+ * @run testng/othervm --enable-native-access=jdk.incubator.jextract,ALL-UNNAMED LibUnsupportedTest
  */
 
 /*
@@ -48,13 +49,14 @@ import test.jextract.unsupported.*;
  * @modules jdk.incubator.jextract
  *
  * @run driver JtregJextractSources -l Unsupported -t test.jextract.unsupported -- unsupported.h
- * @run testng/othervm -Dforeign.restricted=permit LibUnsupportedTest
+ * @run testng/othervm --enable-native-access=jdk.incubator.jextract,ALL-UNNAMED LibUnsupportedTest
  */
 
 public class LibUnsupportedTest {
     @Test
     public void testAllocateFoo() {
-        try (var seg = Foo.allocate()) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            var seg = Foo.allocate(scope);
             Foo.i$set(seg, 32);
             Foo.c$set(seg, (byte)'z');
             assertEquals(Foo.i$get(seg), 32);
@@ -64,11 +66,13 @@ public class LibUnsupportedTest {
 
     @Test
     public void testGetFoo() {
-        var seg = getFoo().asSegmentRestricted(Foo.sizeof());
-        Foo.i$set(seg, 42);
-        Foo.c$set(seg, (byte)'j');
-        assertEquals(Foo.i$get(seg), 42);
-        assertEquals(Foo.c$get(seg), (byte)'j');
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            var seg = getFoo().asSegment(Foo.sizeof(), scope);
+            Foo.i$set(seg, 42);
+            Foo.c$set(seg, (byte)'j');
+            assertEquals(Foo.i$get(seg), 42);
+            assertEquals(Foo.c$get(seg), (byte)'j');
+        }
     }
 
     private static void checkField(GroupLayout group, String fieldName, MemoryLayout expected) {
