@@ -21,6 +21,7 @@
  * questions.
  */
 
+import jdk.incubator.foreign.ResourceScope;
 import org.testng.annotations.Test;
 
 import static org.testng.Assert.assertEquals;
@@ -32,20 +33,21 @@ import test.jextract.fp.*;
  * @library ..
  * @modules jdk.incubator.jextract
  * @run driver JtregJextract -l FuncPtr -t test.jextract.fp -- funcPtr.h
- * @run testng/othervm -Dforeign.restricted=permit LibFuncPtrTest
+ * @run testng/othervm --enable-native-access=jdk.incubator.jextract,ALL-UNNAMED LibFuncPtrTest
  */
 /*
  * @test id=sources
  * @library ..
  * @modules jdk.incubator.jextract
  * @run driver JtregJextractSources -l FuncPtr -t test.jextract.fp -- funcPtr.h
- * @run testng/othervm -Dforeign.restricted=permit LibFuncPtrTest
+ * @run testng/othervm --enable-native-access=jdk.incubator.jextract,ALL-UNNAMED LibFuncPtrTest
  */
 public class LibFuncPtrTest {
     @Test
     public void test() {
-        try (var handle = func$f.allocate(x -> x*x)) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            var handle = func$f.allocate(x -> x * x, scope);
             assertEquals(func(handle, 35), 35 * 35 + 35);
-        } //deallocate
+        }
     }
 }
